--- a/module3-assignment/css/styles.css
+++ b/module3-assignment/css/styles.css
@@ -28,7 +28,6 @@
   .navbar-nav > li > a{
     font-size: 1.2em;
     font-weight: bold;
-    text-align: center;
     background-color: #fff;
   }
 
@@ -57,9 +56,6 @@
     overflow: hidden;
     padding: 10px;
     height:1000px;
-  }
-
-  #nav-list{
-
+    width:100%;
   }
 
